@@ -26,9 +26,12 @@ curious, these links may be of interest to you:
     <ul>
       <li><a href="cvs.html">CVS Information</a>
       <li><a href="modules.html">Module Developer Information</a>
+      <li><a href="downloadbugs.html">Downloading Bug Reports</a>
     </ul>
 
     <hr>
-
+<center>
+Last modified: January 12, 2002.
+</center>
   </body>
 </html>
