@@ -1,0 +1,28 @@
+<html>
+<head>
+<title>Downloading Bug Reports</title>
+</head>
+  <body BACKGROUND="black-stone1.jpg"
+    bgcolor="#000000" text="#ffffff"
+    link="#FFFF88" vlink="#EEDDDD" alink="#ff0000">
+<center>
+<h1><font color="pink">Downloading Bug Reports</font></h1>
+</center>
+<p>
+You can access bug reports one at a time using Jitterbug,
+from <a href="http://www.fvwm.org/cgi-bin/fvwm-bug">here</a>.
+Sometimes thats too tedious.
+You can download whole sections
+of the bug database in tar.gz format using these links:
+<ul>
+  <li><a href="http://fvwm.org/fvwm-bugs.tar.gz">All bugs</a>
+  <li><a href="http://fvwm.org/fvwm-bugs-incoming.tar.gz">Incoming</a>
+  <li><a href="http://fvwm.org/fvwm-bugs-confirmed.tar.gz">Confirmed</a>
+</ul>
+<hr>
+<center>
+Created: Jan 12, 2002.
+Last modified: Jan 12, 2002.
+</center>
+</body>
+</html>
