@@ -47,7 +47,7 @@ void SendText(int *fd, char *message, unsigned long window) {
 </pre></font>
 This routine is available as a library function in libfvwm.
 For compatibility with older code, there is a macro "SendInfo"
-which can be used instead of the function name SentText.
+which can be used instead of the function name SendText.
 <h2><font color="turquoise">
 Module information requests
 </font></h2>
