@@ -1,3 +1,8 @@
+2002-01-12  Dan Espen  <dane@mk.telcordia.com>
+
+	* developers.html: Link to bug downloads.
+	* downloadbugs.html: Add page with links for downloading bug reports.
+
 2002-01-01  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* icons.html:
